# Robotic-Arm

./: CMakeLists.txt  package.xml
config/: joint_names_final_final design for urdf.yaml  joint_trajectory_controller.yaml
launch/: arm_urdf.launch  display.launch  display.launch.py  gazebo.launch  gazebo_launch.py  load_robot.launch.py  my_world.launch
meshes/: connecting_rod_coupler_link.stl  end1_link.stl  end2_link.stl  upper_arm_link.stl
urdf/: final_final design for urdf.csv  final_final_design_for_urdf.urdf
world/: empty_world.world
