<package format="3">
  <name>final_final_design_for_urdf</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for robot_arm_urdf.
    This package contains configuration data, 3D models, and launch files
    for the robot_arm_urdf robot.
  </description>
  <maintainer email="sjmahanax78@gmail.com">Subhrajit</maintainer>
  <license>BSD</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>moveit2</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

